Fixed various issues found by the "Findbugs" tool